--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --__main-font: "Alata", serif;
+  --__main-color: #8E3DFF;
+  --__secondary-color: #DCC3FF;
+  --__white-color: #FFFFFF;
+  --__grey-color: #FAFAFA;
+  --__btn-hover-color: #7A3EEA;
+  --__text-color: #000A4B;
+
+  font-family: var(--__main-font);
   line-height: 1.5;
   font-weight: 400;
 
@@ -35,7 +45,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -52,7 +62,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
