--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -16,14 +16,14 @@
     .GameContainer {
         position: relative;
         width: 70%;
-        height: 80%;
-        max-width: 1100px;
+        max-width: 1000px;
         background-color: var(--__grey-color);
         border-radius: 15px;
         filter: drop-shadow(0px 2px 12px rgba(0, 0, 0, 0.15));
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 20px;
 
         .response-container{
             width: 100%;
