--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,15 @@
 :root {
   --__main-font: "Alata", serif;
   --__main-color: #8E3DFF;
-  --__secondary-color: #DCC3FF;
+  --__secondary-color: #eadbff;
   --__white-color: #FFFFFF;
   --__grey-color: #FAFAFA;
   --__btn-hover-color: #7A3EEA;
   --__text-color: #000A4B;
+  --__green-color: #83BF4F;
+  --__light-green-color: #E7F4DC;
+  --__red-color: #FF1D1D;
+  --__light-red-color: #FFDEDE;
 
   font-family: var(--__main-font);
   line-height: 1.5;
@@ -44,25 +48,6 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
 
 @media (prefers-color-scheme: light) {
   :root {
