--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,11 +1,27 @@
 .home {
     height: 100%;
     width: 100%;
+    background-image: url("https://i.ibb.co/vxL9DQ7s/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     h1 {
         margin-top: 0;
+    }
+
+    .home__container {
+        background-color: var(--__grey-color);
+        width: 80%;
+        height: 70%;
+        overflow: auto;
+        border-radius: 15px;
+        filter: drop-shadow(0px 2px 12px rgba(0, 0, 0, 0.15));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
     }
 }
