--- a/src/components/ThemeCart.css
+++ b/src/components/ThemeCart.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
     padding: 6px 20px;
     margin-bottom: 1rem;
+    width: fit-content;
     p{
         margin: 0;
     }
