--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,13 +8,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    h1 {
+    h2 {
         margin-top: 0;
     }
 
     .home__container {
         background-color: var(--__grey-color);
-        width: 80%;
+        width: 90%;
         height: 70%;
         overflow: auto;
         border-radius: 15px;
@@ -22,6 +22,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 20px;
+        padding: 30px;
+
+        .quizzes {
+            margin-top: 1rem;
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            row-gap: 1rem;
+            column-gap: 2rem;
+        }
     }
 }
