--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-.home {
+.login {
     height: 100%;
     width: 100%;
     background-image: url("https://i.ibb.co/vxL9DQ7s/background.png");
@@ -13,25 +13,16 @@
         margin-top: 0;
     }
 
-    .home__container {
+    .login-form {
         background-color: var(--__grey-color);
+        min-width: 350px;
+        max-width: 500px;
         width: 90%;
-        height: 70%;
-        overflow: auto;
         border-radius: 15px;
         filter: drop-shadow(0px 2px 12px rgba(0, 0, 0, 0.15));
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 30px;
-
-        .quizzes {
-            margin-top: 1rem;
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            row-gap: 1rem;
-            column-gap: 2rem;
+        form {
+            display: flex;
+            flex-direction: column;
         }
     }
 }
