refactor: reorganize components and styles, remove unused files, and enhance layout

--- a/src/components/SelectQuiz/SelectQuiz.css
+++ b/src/components/SelectQuiz/SelectQuiz.css
@@ -23,5 +23,9 @@
         font-family: var(--__font-family);
         font-size: 1rem;
         padding: 0.5rem 1.7rem;
+        &:hover {
+            cursor: pointer;
+            background-color: var(--__btn-hover-color);
+        }
     }
 }
