--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 20px 0;
 }
 
 .error-message {
@@ -107,10 +108,12 @@ body {
   background-color: var(--__grey-color);
   min-width: 350px;
   max-width: 450px;
+  max-height: 100%;
   width: 90%;
   border-radius: 15px;
   padding: 30px 30px 50px;
   filter: drop-shadow(0px 2px 12px rgba(0, 0, 0, 0.15));
+  overflow: auto;
 
   h2 {
     margin-top: 0;
