--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -9,6 +9,8 @@
     width: 80%;
     min-width: 400px;
     max-width: 650px;
+    max-height: 100%;
+    overflow: auto;
 
     ul {
         padding: 0;
