--- a/src/pages/PlayQuiz/PlayQuiz.css
+++ b/src/pages/PlayQuiz/PlayQuiz.css
@@ -6,6 +6,7 @@ h1 {
     position: relative;
     width: 70%;
     max-width: 1000px;
+    max-height: 100%;
     background-color: var(--__grey-color);
     border-radius: 15px;
     filter: drop-shadow(0px 2px 12px rgba(0, 0, 0, 0.15));
@@ -13,6 +14,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    overflow: auto;
 
     .response-container{
         width: 100%;
