feat: add Modal component for user actions and enhance UserList with delete and promote functionality

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --__light-green-color: #E7F4DC;
   --__red-color: #FF1D1D;
   --__light-red-color: #FFDEDE;
+  --__blue-color: #3D8BFF;
 
   font-family: var(--__main-font);
   line-height: 1.5;
