--- a/src/components/SelectQuiz/SelectQuiz.css
+++ b/src/components/SelectQuiz/SelectQuiz.css
@@ -28,4 +28,17 @@
             background-color: var(--__btn-hover-color);
         }
     }
+    .delete-quiz-btn {
+        border: none;
+        border-radius: 5px;
+        background-color: var(--__red-color);
+        color: var(--__white-color);
+        font-family: var(--__font-family);
+        font-size: 1rem;
+        padding: 0.5rem 1.7rem;
+        &:hover {
+            cursor: pointer;
+            background-color: var(--__btn-hover-color);
+        }
+    }
 }
